[rdct] launcher: rewrite test harness
GitOrigin-RevId: 92fb11af53b514ba2fc0ea2fdb7a8232a3aebf74